add 3 talk